- Better Exception handling
Signed-off-by: syeyoung <cyoung06@naver.com>